--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -9,12 +9,20 @@ header {
   }
 }
 
-;
+.header-fix {
+  z-index: 25;
+  height: 80px;
+  @include mq-down(md) {
+    height: 100px;
+  }
+}
+
 #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
   font-weight: bold;
+  z-index: 25;
 }
 
 #logo:hover {
@@ -69,21 +77,28 @@ header {
 
   background-color: white;
   position: fixed;
-  top: 80px;
-  @include mq-down(md) {
-    top: 100px;
-  }
+  top: 0;
+  // @include mq-down(md) {
+  //   top: 100px;
+  // }
 
   right: 0;
   left: 0;
   bottom: 0;
   z-index: 10;
   display: none;
-  padding: 20px;
+  padding: 80px 20px 20px 20px;
   .hamburger-close-btn {
     padding-top: 12px;
+    z-index: 25;
   }
   .header-item-hm {
     margin-bottom: 10px;
   }
+}
+
+.fixed {
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
