--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -11,10 +11,10 @@ header {
 
 .header-fix {
   z-index: 25;
-  height: 80px;
-  @include mq-down(md) {
-    height: 100px;
-  }
+  // height: 80px;
+  // @include mq-down(md) {
+  //   height: 100px;
+  // }
 }
 
 #logo {
