--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -52,9 +52,9 @@ input, textarea, select{
   font-size: 16px !important;
 }
 
-select {
-  border : 1px solid #ccc;
-  -webkit-border-radius : 0;
-  -webkit-appearance : none;
-  -webkit-tap-highlight-color : rgba(0,0,0,0);
-}
+// select {
+//   border : 1px solid #ccc;
+//   -webkit-border-radius : 0;
+//   -webkit-appearance : none;
+//   -webkit-tap-highlight-color : rgba(0,0,0,0);
+// }
