--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -50,11 +50,12 @@ $breakpoint-down: (
 
 input, textarea, select{
   font-size: 16px !important;
+  -webkit-appearance : none;
 }
 
-// select {
+select {
 //   border : 1px solid #ccc;
 //   -webkit-border-radius : 0;
-//   -webkit-appearance : none;
+// -webkit-appearance : none;
 //   -webkit-tap-highlight-color : rgba(0,0,0,0);
 // }
