--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -53,7 +53,7 @@ input, textarea, select{
   -webkit-appearance : none;
 }
 
-select {
+// select {
 //   border : 1px solid #ccc;
 //   -webkit-border-radius : 0;
 // -webkit-appearance : none;
