--- a/app/views/users/_staff_search_form.html.erb
+++ b/app/views/users/_staff_search_form.html.erb
@@ -1,7 +1,13 @@
 <div class="user-index">
   <div class="container">
+    <div class="search-hamburger-open-btn">
+      <i class="fa fa-chevron-right"></i>モデル検索画面を開く
+    </div>
     <div class="find-users">
-      <div>
+      <div class="search-hamburger-close-btn">
+        <i class="fa fa-chevron-left"></i>モデル検索画面を閉じる
+      </div>
+      <div class="search-form-inner">
         <%= form_tag(users_path, method: "get") do %>
           <div class="row">
             <div class="form-group col-md-3">
