--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <aside class="col-md-4 col-xs-4 ">
     <% if @user.image.present?  %>
-      <%= image_tag @user.image_url %>
+      <%= cl_image_tag(@user.image_url, width: 300, height: 200, crop: :fill, class: 'user-image') %>
     <% else %>
       <%= image_tag '/no-image.png', class: "no-image"%>
     <% end %>
@@ -18,8 +18,6 @@
 
   <div class="col-md-8 col-xs-8">
     <div class="user-info-detail">
-      <div>ユーザー名</div>
-      <div><%= @user.name %></div>
       <div>トーク履歴</div>
       <div>
         <div>
